# claude-code-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
MCP/: README.md
MCP/plans-mcp-server/: LICENSE  README.md  pyproject.toml
MCP/plans-mcp-server/examples/: usage_examples.md
MCP/plans-mcp-server/src/: __init__.py  plan_manager.py  server.py
MCP/server_template/: .gitignore  BACKEND_SELECTOR.md  README.md  package.json  tsconfig.json
MCP/server_template/examples/: config-nodejs.json  config-python.json  config-typescript.json
MCP/server_template/src/: index.ts
MCP/server_template/src/backends/: README.md
MCP/server_template/src/backends/nodejs/: package.json  server.js
MCP/server_template/src/backends/python/: pyproject.toml  server.py
MCP/server_template/src/backends/typescript/: package.json  server.ts  tsconfig.json
ai_docs/: MCP_readme_template.md  README.md  aceternity-ui.md  animated-gradients.md  commands_readme_template.md  framer-motion.md  ollama-api.md  react-typescript.md
commands/: README.md  ai_docs.md  gen_next_ui.md  populate_docs.md  wisdom.md
commands/wisdom_extraction/: README.md
specs/: README.md
templates/: README.md
tools/: README.md
